stop the logo from getting too small

--- a/assets/style.css
+++ b/assets/style.css
@@ -92,6 +92,13 @@ body {
   .button {
     border-width: 0px;
   }
+
+  @media only screen and (max-width: 480px) {
+    #logo {
+     max-width: 100%;
+    }
+   }
+ 
   
   /* The slider */
   .slider {
